Criado e estilizado o container para o formulário

--- a/src/app/nova-transferencia/nova-transferencia.component.html
+++ b/src/app/nova-transferencia/nova-transferencia.component.html
@@ -1,16 +1,20 @@
-<form>
-  <h2>Nova Transferência</h2>
+<section class="container">
+  <form>
+    <h2>Nova Transferência</h2>
 
-  <div>
-      <label for="valor">Valor</label>
-      <input id="valor" type="text">
+    <div>
+        <label for="valor">Valor</label>
+        <input id="valor" type="text">
+    </div>
+
+
+    <div>
+      <label for="destino">Destino</label>
+      <input id="destino" type="text">
   </div>
 
+  <button>Transferir</button>
+  </form>
 
-  <div>
-    <label for="destino">Destino</label>
-    <input id="destino" type="text">
-</div>
 
-<button>Transferir</button>
-</form>
+</section>
