--- a/src/app/nova-transferencia/nova-transferencia.component.html
+++ b/src/app/nova-transferencia/nova-transferencia.component.html
@@ -1,19 +1,21 @@
 <section class="container">
-  <form>
-    <h2>Nova Transferência</h2>
+  <form class="formulario">
+    <h2 class="formulario__titulo">Nova Transferência</h2>
 
-    <div>
-        <label for="valor">Valor</label>
-        <input id="valor" type="text">
+    <div class="form-field">
+        <label class="form-field__label" for="valor">Valor</label>
+        <input class="form-field__input" id="valor" type="text">
     </div>
 
 
-    <div>
-      <label for="destino">Destino</label>
-      <input id="destino" type="text">
+    <div class="form-field">
+      <label class="form-field__label" for="destino">Destino</label>
+      <input class="form-field__input" id="destino" type="text">
   </div>
+   <div class="botao-wrapper">
+    <button class="botao" (click)="transferir()">Transferir</button>
+   </div>
 
-  <button>Transferir</button>
   </form>
 
 
