--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,5 @@
 
 </app-nova-transferencia>
 
-<p>Valor: {{valor}}</p>
-<p>Destino: {{destino}}</p>
+<p>Valor: {{transferencia?.valor}}</p>
+<p>Destino: {{transferencia?.destino}}</p>
