--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,7 @@
 
 </app-nova-transferencia>
 
+<app-extrato></app-extrato>
+
 <p>Valor: {{transferencia?.valor}}</p>
 <p>Destino: {{transferencia?.destino}}</p>
