--- a/src/app/extrato/extrato.component.html
+++ b/src/app/extrato/extrato.component.html
@@ -1,5 +1,14 @@
-<div *ngFor="let transferencia of transferencias">
-  <p>Valor: {{transferencia.valor}}</p>
-  <p>Destino: {{transferencia.destino}}</p>
-</div>
+<table>
+    <thead>
+        <th>Data</th>
+        <th>Valor</th>
+        <th>Destino</th>
+    </thead>
+    <tr *ngFor="let transferencia of transferencias">
+        <td>{{transferencia.data}}</td>
+        <td>{{transferencia.valor}}</td>
+        <td>{{transferencia.destino}}</td>
+    </tr>
+</table>
+
 
