--- a/src/app/extrato/extrato.component.html
+++ b/src/app/extrato/extrato.component.html
@@ -1,13 +1,13 @@
-<table>
-    <thead>
-        <th>Data</th>
-        <th>Valor</th>
-        <th>Destino</th>
+<table class="tabela">
+    <thead class="tabela__cabecalho">
+        <th class="tabela_cabecalho__conteudo">Data</th>
+        <th class="tabela_cabecalho__conteudo">Valor</th>
+        <th class="tabela_cabecalho__conteudo">Destino</th>
     </thead>
-    <tr *ngFor="let transferencia of transferencias">
-        <td>{{transferencia.data}}</td>
-        <td>{{transferencia.valor}}</td>
-        <td>{{transferencia.destino}}</td>
+    <tr class="tabela__linha" *ngFor="let transferencia of transferencias">
+        <td class="tabela__conteudo">{{transferencia.data | date : "short"}}</td>
+        <td class="tabela__conteudo">{{transferencia.valor | currency }}</td>
+        <td class="tabela__conteudo">{{transferencia.destino}}</td>
     </tr>
 </table>
 
