conclusão do projeto (curso).

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,15 @@
-<app-nova-transferencia (aoTransferir)="transferir($event)">
+<header>
+  <a routerLink="extrato">Bytebank</a>
+  <a routerLink="nova-transferencia/" routerLinkActive="ativo">Nova Transferência</a>
+</header>
+<main>
+  <router-outlet>
 
-</app-nova-transferencia>
+  </router-outlet>
+</main>
 
-<app-extrato [transferencias]="transferencias"></app-extrato>
+
+
+
 
 
