--- a/src/app/extrato/extrato.component.html
+++ b/src/app/extrato/extrato.component.html
@@ -1,4 +1,6 @@
-<table class="tabela">
+<section class="container">
+  <h2 class="titulo">Transferências</h2>
+  <table class="tabela">
     <thead class="tabela__cabecalho">
         <th class="tabela_cabecalho__conteudo">Data</th>
         <th class="tabela_cabecalho__conteudo">Valor</th>
@@ -16,5 +18,7 @@
 <ng-template #listaVazia>
   <p>Nenhuma operação cadastrada</p>
 </ng-template>
+</section>
+
 
 
