--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,10 +6,18 @@
   --cinza-claro: #dedede;
 }
 
+
+
 * {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
   font-family: "Roboto", sans-serif;
 }
 
+a{
+  color: inherit;
+}
 .container {
   max-width: 400px;
   padding: 30px;
